# rs-bounded

./: Cargo.toml  README.md
src/: bounded.rs  lib.rs
